--- a/CICD/.settings/org.talend.repository.prefs
+++ b/CICD/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:m4N3CfZyscoQa1lDuRjB5Q1yolO0vgtsiqBcmCumzFxu5odzEhebpNo\=
